tests/ui/attributes/z-crate-attr/multiple.stderr
error: invalid crate attribute
  --> <crate attribute>:1:1
   |
LL | feature(foo),feature(bar)
   | ^^^^^^^^^^^^^

error: aborting due to 1 previous error

